# ebookreader

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/.github/: copilot-instructions.md
src-tauri/src/: api.rs  lib.rs  main.rs  tests.rs
src-tauri/src/commands/: book_commands.rs  library_commands.rs  metadata_commands.rs  mod.rs  sample.rs
src-tauri/src/controllers/: annotation_controller.rs  auth_controller.rs  auth_middleware.rs  book_controller.rs  bookmark_controller.rs  mod.rs  opds_controller.rs  reading_progress_controller.rs  search_controller.rs  user_controller.rs
src-tauri/src/controllers/dto/: annotation_dto.rs  bookmark_dto.rs  login_dto.rs  mod.rs  reading_progress_dto.rs  user_dto.rs
src-tauri/src/data/: database.db  database.rs  mod.rs
src-tauri/src/data/models/: annotations.rs  authors.rs  book_authors.rs  bookmarks.rs  books.rs  configuration.rs  libraries.rs  mod.rs  (+5 more)
src-tauri/src/handlers/: epub_handler.rs  file_handler.rs  mod.rs
src-tauri/src/opds/: mod.rs
src-tauri/src/services/: authentication_service.rs  book_service.rs  cover_service.rs  metadata_service.rs  mod.rs  token_service.rs
src-tauri/src/utils/: deserializers.rs  mappers.rs  mod.rs  serializers.rs
src-tauri/tests/: README.md  author_repo_tests.rs  book_author_repo_tests.rs  book_repo_tests.rs  connection_tests.rs  controller_tests.rs  library_repo_tests.rs  publisher_repo_tests.rs  service_tests.rs  user_library_repo_tests.rs  user_repo_tests.rs
(+73 files in other folders)
