[package]
name = "stellaron"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stellaron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
diesel-async = { version = "0.7.4", features = ["sqlite", "deadpool"] }
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
serial_test = "3.2.0"
diesel = { version = "2.3.3", features = ["chrono", "sqlite"] }
rbook = { version = "0.6.6", features = ["threadsafe"] }
dotenvy = "0.15.7"
axum = "0.8.4"
walkdir = "2.5.0"
async-trait = "0.1.89"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
axum-extra = { version = "0.12.1", features = ["cookie", "file-stream", "attachment", "typed-header"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# 👇 Force bundled SQLite
[dependencies.libsqlite3-sys]
version = "0.35"
features = ["bundled"]

